--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -34,6 +34,7 @@ link_libraries(
 )
 
 add_library(${PROJECT_NAME}
+  src/Datastructures/Graph.cpp
   src/GLS.cpp
   src/Event/Event.cpp
   src/Selector/Selector.cpp
