--- a/package.xml
+++ b/package.xml
@@ -10,4 +10,13 @@
     <depend>ompl</depend>
     <depend>boost</depend>
     <depend>eigen</depend>
+
+    <!-- This is required by REP-136. -->
+    <exec_depend>catkin</exec_depend>
+    <buildtool_depend>cmake</buildtool_depend>
+    <buildtool_depend>clang-format-3.8</buildtool_depend>
+    <buildtool_depend>lcov</buildtool_depend>
+    <export>
+        <build_type>cmake</build_type>
+    </export>
 </package>
