add state wrapper for ompl

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -48,6 +48,7 @@ link_libraries(
 add_library(${PROJECT_NAME}
   src/Datastructures/Graph.cpp
   src/Datastructures/SearchQueue.cpp
+  src/Datastructures/State.cpp
   src/GLS.cpp
   src/Event/Event.cpp
   src/Selector/Selector.cpp
