start the shortest path event

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -51,6 +51,7 @@ add_library(${PROJECT_NAME}
   src/datastructures/State.cpp
   src/GLS.cpp
   src/event/Event.cpp
+  src/event/ShortestPathEvent.cpp
   src/selector/Selector.cpp
 )
 
