build test script

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -63,6 +63,13 @@ install(TARGETS ${PROJECT_NAME}
 )
 
 #================================================================================
+# Example Scripts
+#================================================================================
+
+add_executable(test2d examples/test2d.cpp)
+target_link_libraries(test2d ${PROJECT_NAME})
+
+#================================================================================
 # Formatting
 #================================================================================
 
