Remove unnecessary things from repo

--- a/.travis.yml
+++ b/.travis.yml
@@ -39,11 +39,11 @@ script:
   # Check code style
   - ./scripts/internal-run.sh catkin build --no-status --no-deps -p 1 -i --make-args check-format -- generalized_lazy_search
   # Manually build generalized_lazy_search's tests; they are not run automatically because it is not a Catkin package.
-  - ./scripts/internal-run.sh catkin build --no-status --no-deps -p 1 -i --cmake-args -DCMAKE_BUILD_TYPE=$BUILD_TYPE -DGENERALIZED_LAZY_SEARCH_TREAT_WARNINGS_AS_ERRORS=ON -DCODECOV=$CODECOV --make-args tests -- generalized_lazy_search
+  # - ./scripts/internal-run.sh catkin build --no-status --no-deps -p 1 -i --cmake-args -DCMAKE_BUILD_TYPE=$BUILD_TYPE -DGENERALIZED_LAZY_SEARCH_TREAT_WARNINGS_AS_ERRORS=ON -DCODECOV=$CODECOV --make-args tests -- generalized_lazy_search
   # Measure test coverage if CodeCov is on; otherwise, just run tests.
-  - if [ $CODECOV = ON ]; then ./scripts/internal-run.sh make -C build/generalized_lazy_search generalized_lazy_search_coverage; else ./scripts/internal-run.sh make -C build/generalized_lazy_search test; fi
+  # - if [ $CODECOV = ON ]; then ./scripts/internal-run.sh make -C build/generalized_lazy_search generalized_lazy_search_coverage; else ./scripts/internal-run.sh make -C build/generalized_lazy_search test; fi
   # Uploading code coverage report to CodeCov
-  - if [ $CODECOV = ON ]; then bash <(curl -s https://codecov.io/bash) || echo "Codecov did not collect coverage reports."; fi
+  # - if [ $CODECOV = ON ]; then bash <(curl -s https://codecov.io/bash) || echo "Codecov did not collect coverage reports."; fi
 
 after_failure:
   - cat ./build/generalized_lazy_search/Testing/Temporary/LastTest.log
