catkin support = new script

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -19,6 +19,7 @@ endif()
 find_package(catkin REQUIRED)
 find_package(ompl REQUIRED)
 find_package(Boost REQUIRED COMPONENTS thread filesystem graph program_options system)
+find_package(Eigen3 REQUIRED)
 find_package(OpenCV REQUIRED)
 
 catkin_package(
@@ -87,8 +88,12 @@ install(FILES "package.xml"
 #target_link_libraries(test2d ${PROJECT_NAME})
 
 # Correctness Test Script
-#add_executable(test2d_image examples/test2d_image.cpp)
-#target_link_libraries(test2d_image ${PROJECT_NAME} ${OpenCV_LIBS})
+add_executable(test2d_image examples/test2d_image.cpp)
+target_link_libraries(test2d_image ${PROJECT_NAME} ${OpenCV_LIBS})
+
+add_executable(test_cycle examples/test_cycle.cpp)
+target_link_libraries(test_cycle ${PROJECT_NAME} ${OpenCV_LIBS})
+install(TARGETS test_cycle RUNTIME DESTINATION ${CATKIN_PACKAGE_BIN_DESTINATION})
 
 #================================================================================
 # Formatting
