--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -6,12 +6,7 @@ list(INSERT CMAKE_MODULE_PATH 0 "${PROJECT_SOURCE_DIR}/cmake")
 # Compiler settings
 #================================================================================
 # Enforce the use of C++11
-set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11 -Wall -Wextra -Wuninitialized -Wpedantic")
-
-add_compile_options(-Wall -Wextra -Wpedantic)
-if(GENERALIZED_LAZY_SEARCH_TREAT_WARNINGS_AS_ERRORS)
-  add_compile_options(-Werror)
-endif()
+set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++14 -Wall -Wextra -Wuninitialized -Wpedantic -Werror")
 
 #================================================================================
 # Link Libraries
@@ -47,18 +42,7 @@ link_libraries(
 )
 
 add_library(${PROJECT_NAME}
-  src/datastructures/Graph.cpp
-  src/datastructures/SearchQueue.cpp
-  src/datastructures/State.cpp
-  src/GLS.cpp
-  src/event/Event.cpp
-  src/event/ShortestPathEvent.cpp
-  src/event/ConstantDepthEvent.cpp
-  src/selector/Selector.cpp
-  src/selector/AlternateSelector.cpp
-  src/selector/BackwardSelector.cpp
-  src/selector/FailFastSelector.cpp
-  src/selector/ForwardSelector.cpp
+  src/datastructures/PriorityQueue.cpp
 )
 
 #================================================================================
@@ -66,13 +50,9 @@ add_library(${PROJECT_NAME}
 #================================================================================
 
 # Correctness Test Script
-add_executable(test_ShortestPath_Forward examples/test_ShortestPath_Forward.cpp)
-target_link_libraries(test_ShortestPath_Forward ${PROJECT_NAME} ${OpenCV_LIBS})
-install(TARGETS test_ShortestPath_Forward RUNTIME DESTINATION ${CATKIN_PACKAGE_BIN_DESTINATION})
-
-add_executable(test_ConstantDepth_Forward examples/test_ConstantDepth_Forward.cpp)
-target_link_libraries(test_ConstantDepth_Forward ${PROJECT_NAME} ${OpenCV_LIBS})
-install(TARGETS test_ConstantDepth_Forward RUNTIME DESTINATION ${CATKIN_PACKAGE_BIN_DESTINATION})
+# add_executable(test_ShortestPath_Forward examples/test_ShortestPath_Forward.cpp)
+# target_link_libraries(test_ShortestPath_Forward ${PROJECT_NAME} ${OpenCV_LIBS})
+# install(TARGETS test_ShortestPath_Forward RUNTIME DESTINATION ${CATKIN_PACKAGE_BIN_DESTINATION})
 
 #================================================================================
 # Installation
@@ -95,22 +75,6 @@ export(TARGETS gls FILE glsConfig.cmake)
 # Install the package.xml file (to satisfy REP-136).
 install(FILES "package.xml"
   DESTINATION "share/gls")
-
-#================================================================================
-# Formatting
-#================================================================================
-include(ClangFormat)
-
-clang_format_setup(VERSION 3.8)
-
-if (CLANG_FORMAT_EXECUTABLE)
-  FILE(GLOB_RECURSE gls_headers "include/*.hpp")
-  FILE(GLOB_RECURSE gls_srcs "include/*.cpp")
-  clang_format_add_sources(${gls_headers})
-  clang_format_add_sources(${gls_srcs})
-
-  clang_format_add_targets()
-endif()
 
 #================================================================================
 # IDE Comfort
