--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -45,7 +45,7 @@ link_libraries(
 )
 
 add_library(${PROJECT_NAME}
-  src/datastructures/PriorityQueue.cpp
+  src/GLS.cpp
 )
 
 #================================================================================
