--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -8,5 +8,5 @@ endfunction()
 # Add helper scripts to the include path.
 include_directories("${CMAKE_CURRENT_SOURCE_DIR}")
 
-# add_subdirectory(common)
 add_subdirectory(datastructures)
+add_subdirectory(event)
